tests/type-errors/duplicated_action.arl
archetype duplicated_action

entry main () {
  effect {
    ()
  }
}

entry main () {
  effect {
    ()
  }
}
